added starmodels and some other stuff

--- a/fpp/test.ipynb
+++ b/fpp/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:512264b503091443f3e7e4dcb1bd1b9f3c6ceb290d4e97a39612fc5b922295f3"
+  "signature": "sha256:c9f92a9310ea7bac733dd43fcdf850c2800fb41933e918e7dc73be7bbab8c46b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,8 +18,9 @@
       "import numpy as np\n",
       "import pandas as pd\n",
       "\n",
-      "from k2fpp.transitsignal import get_samples\n",
-      "from k2fpp.tables import PAPER1_TABLE"
+      "from k2fpp.transitsignal import get_samples, K2_TransitSignal\n",
+      "from k2fpp.tables import PAPER1_TABLE\n",
+      "from k2fpp.starmodels import EPIC_StarModel"
      ],
      "language": "python",
      "metadata": {},
@@ -30,7 +31,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "PAPER1_TABLE.head()"
+      "PAPER1_TABLE.head(5)"
      ],
      "language": "python",
      "metadata": {},
@@ -129,102 +130,74 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "samples = get_samples(PAPER1_TABLE.index[0])"
+      "trsig = K2_TransitSignal(201208431)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "ERROR:root:samples/201208431.h5\n"
-       ]
-      },
-      {
-       "ename": "TypeError",
-       "evalue": "cannot create a storer if the object is not existing nor a value are passed",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-3-0737dc0680aa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msamples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_samples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPAPER1_TABLE\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;32m/u/tdm/repositories/k2-characterization/fpp/k2fpp/transitsignal.py\u001b[0m in \u001b[0;36mget_samples\u001b[1;34m(epic_id)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[0msamples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_hdf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'samples'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m     \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[0mlogging\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/u/tdm/anaconda/lib/python2.7/site-packages/pandas/io/pytables.pyc\u001b[0m in \u001b[0;36mread_hdf\u001b[1;34m(path_or_buf, key, **kwargs)\u001b[0m\n\u001b[0;32m    321\u001b[0m         \u001b[0mstore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHDFStore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    322\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 323\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstore\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    324\u001b[0m         \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    325\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/u/tdm/anaconda/lib/python2.7/site-packages/pandas/io/pytables.pyc\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(store, auto_close)\u001b[0m\n\u001b[0;32m    303\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    304\u001b[0m     f = lambda store, auto_close: store.select(\n\u001b[1;32m--> 305\u001b[1;33m         key, auto_close=auto_close, **kwargs)\n\u001b[0m\u001b[0;32m    306\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    307\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstring_types\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/u/tdm/anaconda/lib/python2.7/site-packages/pandas/io/pytables.pyc\u001b[0m in \u001b[0;36mselect\u001b[1;34m(self, key, where, start, stop, columns, iterator, chunksize, auto_close, **kwargs)\u001b[0m\n\u001b[0;32m    649\u001b[0m         \u001b[1;31m# create the storer and axes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    650\u001b[0m         \u001b[0mwhere\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_ensure_term\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwhere\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscope_level\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 651\u001b[1;33m         \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_create_storer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    652\u001b[0m         \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfer_axes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    653\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/u/tdm/anaconda/lib/python2.7/site-packages/pandas/io/pytables.pyc\u001b[0m in \u001b[0;36m_create_storer\u001b[1;34m(self, group, format, value, append, **kwargs)\u001b[0m\n\u001b[0;32m   1146\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1147\u001b[0m                     raise TypeError(\n\u001b[1;32m-> 1148\u001b[1;33m                         \u001b[1;34m\"cannot create a storer if the object is not existing \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1149\u001b[0m                         \"nor a value are passed\")\n\u001b[0;32m   1150\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mTypeError\u001b[0m: cannot create a storer if the object is not existing nor a value are passed"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ls -ltr samples"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "total 54344\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:13 201208431.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:13 201257461.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:13 201295312.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:13 201338508.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:14 201367065.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201384232.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201393098.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201403446.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:14 201445392.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201465501.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:14 201505350.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201546283.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201549860.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201555883.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201565013.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201569483.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201577035.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201596316.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:14 201613023.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201617985.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201629650.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201635569.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201649426.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201702477.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201736247.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 4802144 Feb 27 11:15 201754305.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201779067.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201828749.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201855371.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201912552.h5\r\n",
-        "-rw-rw-r--. 1 tdm tdm 1202144 Feb 27 11:15 201929294.h5\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 15
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "store = pd.HDFStore('samples/201208431.h5')"
+      "mod = EPIC_StarModel(201208431)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "store"
+      "mod.fit_mcmc()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mod.save_hdf('test_starmodel.h5')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mod2 = EPIC_StarModel.load_hdf('test_starmodel.h5')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "store = pd.HDFStore('test_starmodel.h5')\n",
+      "df = store['samples']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "df.columns"
      ],
      "language": "python",
      "metadata": {},
@@ -232,46 +205,19 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 7,
        "text": [
-        "<class 'pandas.io.pytables.HDFStore'>\n",
-        "File path: samples/201208431.h5\n",
-        "Empty"
+        "Index([u'B_mag', u'D51_mag', u'H_mag', u'I_mag', u'J_mag', u'K_mag', u'Kepler_mag', u'R_mag', u'Teff', u'U_mag', u'V_mag', u'W1_mag', u'W2_mag', u'W3_mag', u'W4_mag', u'age', u'g_mag', u'i_mag', u'logL', u'logg', u'mass', u'r_mag', u'radius', u'z_mag', u'feh', u'distance', u'AV'], dtype='object')"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "store.close()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import h5py\n",
-      "f = h5py.File('samples/201208431.h5', 'r')\n",
-      "samples = np.array(f['samples'])\n",
-      "f.close()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 19
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "samples"
+      "df.shape"
      ],
      "language": "python",
      "metadata": {},
@@ -279,25 +225,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 8,
        "text": [
-        "array([[  1.05305895e-01,   1.18362161e-03,   1.59558964e+01,\n",
-        "          9.99957430e+00,   7.53961245e+00],\n",
-        "       [  1.39187101e-01,   1.54509183e-03,   3.39059649e+00,\n",
-        "          1.00058620e+01,   7.51377542e+00],\n",
-        "       [  1.49554790e-01,   1.36612071e-03,   4.83823065e+00,\n",
-        "          1.00039290e+01,   7.52140261e+00],\n",
-        "       ..., \n",
-        "       [  1.49083909e-01,   1.55577310e-03,   3.33589144e+00,\n",
-        "          1.00061481e+01,   7.51545042e+00],\n",
-        "       [  1.07292527e-01,   1.34063095e-03,   1.55026856e+01,\n",
-        "          1.00033586e+01,   7.52506007e+00],\n",
-        "       [  1.68401346e-01,   1.63286573e-03,   2.39856918e+00,\n",
-        "          1.00068100e+01,   7.51043377e+00]])"
+        "(40000, 27)"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
