EPIC 201912552 section. I now have this EPIC memorized. Time for PuppyButtonFace.

--- a/exopapers.bib
+++ b/exopapers.bib
@@ -1008,6 +1008,27 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Charbonneau09,
+   author = {{Charbonneau}, D. and {Berta}, Z.~K. and {Irwin}, J. and {Burke}, C.~J. and 
+	{Nutzman}, P. and {Buchhave}, L.~A. and {Lovis}, C. and {Bonfils}, X. and 
+	{Latham}, D.~W. and {Udry}, S. and {Murray-Clay}, R.~A. and 
+	{Holman}, M.~J. and {Falco}, E.~E. and {Winn}, J.~N. and {Queloz}, D. and 
+	{Pepe}, F. and {Mayor}, M. and {Delfosse}, X. and {Forveille}, T.
+	},
+    title = "{A super-Earth transiting a nearby low-mass star}",
+  journal = {\nat},
+archivePrefix = "arXiv",
+   eprint = {0912.3229},
+ primaryClass = "astro-ph.EP",
+     year = 2009,
+    month = dec,
+   volume = 462,
+    pages = {891-894},
+      doi = {10.1038/nature08679},
+   adsurl = {http://adsabs.harvard.edu/abs/2009Natur.462..891C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Choi13,
    author = {{Choi}, J. and {McCarthy}, C. and {Marcy}, G.~W. and {Howard}, A.~W. and 
@@ -1195,6 +1216,27 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1305.0571C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 } 
+
+@ARTICLE{Crossfield15,
+   author = {{Crossfield}, I.~J.~M. and {Petigura}, E. and {Schlieder}, J. and 
+	{Howard}, A.~W. and {Fulton}, B.~J. and {Aller}, K.~M. and {Ciardi}, D.~R. and 
+	{Lepine}, S. and {Barclay}, T. and {de Pater}, I. and {de Kleer}, K. and 
+	{Quintana}, E.~V. and {Christiansen}, J.~L. and {Schlafly}, E. and 
+	{Kaltenegger}, L. and {Crepp}, J.~R. and {Henning}, T. and {Obermeier}, C. and 
+	{Deacon}, N. and {Weiss}, L.~M. and {Isaacson}, H.~T. and {Hansen}, B.~M.~S. and 
+	{Liu}, M.~C. and {Greene}, T. and {Howell}, S.~B. and {Barman}, T. and 
+	{Mordasini}, C.},
+    title = "{A nearby M star with three transiting super-Earths discovered by K2}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1501.03798},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+     year = 2015,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150103798C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
 @ARTICLE{Cumming08,
@@ -4490,6 +4532,21 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...670.1391R},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Rogers14,
+   author = {{Rogers}, L.~A.},
+    title = "{Most 1.6 Earth-Radius Planets are not Rocky}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1407.4457},
+ primaryClass = "astro-ph.EP",
+ keywords = {Astrophysics - Earth and Planetary Astrophysics},
+     year = 2014,
+    month = jul,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1407.4457R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @ARTICLE{Rolleston00,
