--- a/ms.tex
+++ b/ms.tex
@@ -45,6 +45,7 @@
 \newcommand{\coff}{\color{black}\,}
 
 \newcommand{\rprs}{{$R_p/R_{\star}$}}
+\newcommand{\ars}{{$a/R_{\star}$}}
 
 \newcommand{\eg}{{\it e.g.}}
 \newcommand{\ie}{{\it i.e.}}
@@ -378,11 +379,47 @@ The observed radial velocities are included in Table \ref{Tab:RVs}.
 This is Tim.
 
 \section{Potentially Interesting Systems}
-\subsection{The One Around the M dwarf}
+\subsection{A Mini-Neptune with Earthlike Insolation}
+
+Of particular interest is EPIC 201912552. 
+
+By combining archival and modern seeing-limited data with adaptive optics 
+imaging, we can exclude the possibility these transit events are caused by 
+a background eclipsing binary.
+The apparent transits must be caused by an object co-moving with EPIC 201912552;
+radial velocities eliminate the possibility the companion is nonplanetary.
+Therefore, we confirm the planetary nature of this system.
+
+This star is an M2.8 dwarf at a distance of \btmtodo{Distance: around 30 pc}.
+Of our planet candidate hosts, only EPIC 201367065 \citep[originally
+discovered by][]{Crossfield15} is brighter in $K$-band.
+This star is only 0.1 magnitudes fainter in $K$ than GJ\,1214 
+\citep{Charbonneau09}.
+Due to the relative brightness of the host star, this target is likely
+to become a prime target for atmospheric characterization studies
+and is ideal as a target for future space-based missions such as JWST.
+
+Unlike GJ\,1214b, EPIC 201912552b is not highly irradiated. 
+Instead, it is at an reduced semimajor axis \ars$ = 82.1 \pm 8.6$.
+Its equilibrium temperature is then, assuming zero albedo, $T_{eq} = 275 \pm 15$
+K, meaning its bulk insolation is similar to that of the Earth's.
+Although the planet is likely too large to be rocky \citep{Rogers14}, 
+its atmosphere is likely to be the focus of many future observations, providing
+a cool analogue to the highly irradiated planets of a similar size found by 
+\kep.
 
 
 
-\subsection{Some Multi (possible multi of these}
+\subsection{EPIC 201465501?}
+Is this a subsection? It's a star with a mass of ~0.2 Msun and a cnadidate with
+a period of 18 days. I suppose it depends on the FPP.
+
+\subsection{An Instrumental False Positive}
+
+EPIC 201555883 was originally listed in \paperit\ as a planet candidate.
+
+\subsection{Multiple Planet Systems}
+
 
 \subsection{Systems Orbiting Bright Stars}
 
