--- a/ms.tex
+++ b/ms.tex
@@ -417,6 +417,14 @@ a period of 18 days. I suppose it depends on the FPP.
 \subsection{An Instrumental False Positive}
 
 EPIC 201555883 was originally listed in \paperit\ as a planet candidate.
+After submission of that work, this object of interest was identified as 
+having a transit ephemeris consistent with that of EPIC 201569483, 
+which we identify as a likely eclipsing binary due to the observed transit
+depth \anytodo{Right? Right?}. 
+We conclude the observed transit signal from EPIC 201555883 is likely the result 
+of an instrumental artifact.
+
+Cite \citet{Coughlin14} and \citet{Batalha13} in here.
 
 \subsection{Multiple Planet Systems}
 
@@ -435,7 +443,7 @@ purposes.}
 
 
 \acknowledgements
-We thank [People] for [things] which improved the quality of this manuscript.
+We thank [Eric Agol (UW) and Other People] for [things] which improved the quality of this manuscript.
 
 
 We are grateful to the entire Kepler team, past and present. 
