--- a/exopapers.bib
+++ b/exopapers.bib
@@ -1100,6 +1100,29 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{Coughlin14,
+   author = {{Coughlin}, J.~L. and {Thompson}, S.~E. and {Bryson}, S.~T. and 
+	{Burke}, C.~J. and {Caldwell}, D.~A. and {Christiansen}, J.~L. and 
+	{Haas}, M.~R. and {Howell}, S.~B. and {Jenkins}, J.~M. and {Kolodziejczak}, J.~J. and 
+	{Mullally}, F.~R. and {Rowe}, J.~F.},
+    title = "{Contamination in the Kepler Field. Identification of 685 KOIs as False Positives via Ephemeris Matching Based on Q1-Q12 Data}",
+  journal = {\aj},
+archivePrefix = "arXiv",
+   eprint = {1401.1240},
+ primaryClass = "astro-ph.IM",
+ keywords = {binaries: eclipsing, instrumentation: detectors, planetary systems, planets and satellites: detection, stars: statistics, techniques: photometric},
+     year = 2014,
+    month = may,
+   volume = 147,
+      eid = {119},
+    pages = {119},
+      doi = {10.1088/0004-6256/147/5/119},
+   adsurl = {http://adsabs.harvard.edu/abs/2014AJ....147..119C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Covey10,
    author = {{Covey}, K.~R. and {Lada}, C.~J. and {Rom{\'a}n-Z{\'u}{\~n}iga}, C. and 
 	{Muench}, A.~A. and {Forbrich}, J. and {Ascenso}, J.},
