--- a/ms.tex
+++ b/ms.tex
@@ -16,6 +16,7 @@
 \usepackage{hyperref}
 \usepackage{datetime}
 \usepackage{longtable}
+%\usepackage{lscape}
 \usepackage{natbib}
 \usepackage{amsmath}
 \usepackage{ulem}
@@ -85,6 +86,9 @@
 
 
 \begin{document}
+
+
+
 \title{(Working Title) Properties of the \KT\ Campaign 1 Planets, 
 False Positive Probabilities, and Confirmation of $N$ Systems. You 
 Were Warned: it's a Working Title.}
@@ -243,6 +247,9 @@ We combined the derived \teff\ and [Fe/H] values with the empirical
 Accounting for measurement and calibration errors in [Fe/H] and \teff\ we calculated 
 a radius 0.394$\pm0.038R_\odot$. 
 We use these parameters instead of the derived photometric properties for this target.
+
+The full list of stellar parameters adopted in this paper is included in
+Table \ref{Tab:Stars}.
 
 \section{Planet Properties}
 
@@ -494,6 +501,10 @@ Foundation and the Alfred P. Sloan Foundation.
 
 \bibliography{exopapers}
 
+%\include{table_photometry}
+
+
+%\include{table_stellarprops}
 
 
 \end{document}
