Apparently revtex4.1 doesn't play well with pdflscape...

--- a/ms.tex
+++ b/ms.tex
@@ -152,7 +152,7 @@ as found in the 2MASS All-Sky Catalog of Point Sources \citep{Cutri03}
 and the four WISE magnitudes and uncertainties from the ALLWise Data
 Release \citep{Cutri13}.
 For all except two of our targets, the $W4$ band is only an upper limit.
-These data are reported in Table \ref{Tab:Photometry}.
+These data are reported in Table 1.
 
 \btmtodo{Make this table!}
 
@@ -249,7 +249,7 @@ a radius 0.394$\pm0.038R_\odot$.
 We use these parameters instead of the derived photometric properties for this target.
 
 The full list of stellar parameters adopted in this paper is included in
-Table \ref{Tab:Stars}.
+Table 2.
 
 \section{Planet Properties}
 
@@ -501,10 +501,10 @@ Foundation and the Alfred P. Sloan Foundation.
 
 \bibliography{exopapers}
 
-%\include{table_photometry}
+\include{table_photometry}
 
 
-%\include{table_stellarprops}
+\include{table_stellarprops}
 
 
 \end{document}
