tried fitting starmodels; some worked some did not

--- a/fpp/test.ipynb
+++ b/fpp/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c9f92a9310ea7bac733dd43fcdf850c2800fb41933e918e7dc73be7bbab8c46b"
+  "signature": "sha256:105f05266911eb28f9c32a41d637f336e00679048903eef25529a0ef8bfaf3b0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
       "\n",
       "from k2fpp.transitsignal import get_samples, K2_TransitSignal\n",
       "from k2fpp.tables import PAPER1_TABLE\n",
-      "from k2fpp.starmodels import EPIC_StarModel"
+      "from k2fpp.starmodels import get_starmodel"
      ],
      "language": "python",
      "metadata": {},
@@ -163,7 +163,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mod.save_hdf('test_starmodel.h5')"
+      "mod2 = get_starmodel(201208431)"
      ],
      "language": "python",
      "metadata": {},
@@ -174,7 +174,225 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mod2 = EPIC_StarModel.load_hdf('test_starmodel.h5')"
+      "mod2.samples.head()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>B_mag</th>\n",
+        "      <th>D51_mag</th>\n",
+        "      <th>H_mag</th>\n",
+        "      <th>I_mag</th>\n",
+        "      <th>J_mag</th>\n",
+        "      <th>K_mag</th>\n",
+        "      <th>Kepler_mag</th>\n",
+        "      <th>R_mag</th>\n",
+        "      <th>Teff</th>\n",
+        "      <th>U_mag</th>\n",
+        "      <th>...</th>\n",
+        "      <th>i_mag</th>\n",
+        "      <th>logL</th>\n",
+        "      <th>logg</th>\n",
+        "      <th>mass</th>\n",
+        "      <th>r_mag</th>\n",
+        "      <th>radius</th>\n",
+        "      <th>z_mag</th>\n",
+        "      <th>feh</th>\n",
+        "      <th>distance</th>\n",
+        "      <th>AV</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td> 9.380778</td>\n",
+        "      <td> 8.726325</td>\n",
+        "      <td> 5.256940</td>\n",
+        "      <td> 6.768873</td>\n",
+        "      <td> 5.892338</td>\n",
+        "      <td> 5.125826</td>\n",
+        "      <td> 7.589002</td>\n",
+        "      <td> 7.395205</td>\n",
+        "      <td> 4254.140271</td>\n",
+        "      <td> 10.587503</td>\n",
+        "      <td>...</td>\n",
+        "      <td> 7.256561</td>\n",
+        "      <td>-1.071060</td>\n",
+        "      <td> 4.727215</td>\n",
+        "      <td> 0.561751</td>\n",
+        "      <td> 7.665033</td>\n",
+        "      <td> 0.537500</td>\n",
+        "      <td> 7.042150</td>\n",
+        "      <td>-0.574226</td>\n",
+        "      <td> 196.074451</td>\n",
+        "      <td> 0.035483</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td> 9.380778</td>\n",
+        "      <td> 8.726325</td>\n",
+        "      <td> 5.256940</td>\n",
+        "      <td> 6.768873</td>\n",
+        "      <td> 5.892338</td>\n",
+        "      <td> 5.125826</td>\n",
+        "      <td> 7.589002</td>\n",
+        "      <td> 7.395205</td>\n",
+        "      <td> 4254.140271</td>\n",
+        "      <td> 10.587503</td>\n",
+        "      <td>...</td>\n",
+        "      <td> 7.256561</td>\n",
+        "      <td>-1.071060</td>\n",
+        "      <td> 4.727215</td>\n",
+        "      <td> 0.561751</td>\n",
+        "      <td> 7.665033</td>\n",
+        "      <td> 0.537500</td>\n",
+        "      <td> 7.042150</td>\n",
+        "      <td>-0.574226</td>\n",
+        "      <td> 196.074451</td>\n",
+        "      <td> 0.035483</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td> 9.380778</td>\n",
+        "      <td> 8.726325</td>\n",
+        "      <td> 5.256940</td>\n",
+        "      <td> 6.768873</td>\n",
+        "      <td> 5.892338</td>\n",
+        "      <td> 5.125826</td>\n",
+        "      <td> 7.589002</td>\n",
+        "      <td> 7.395205</td>\n",
+        "      <td> 4254.140271</td>\n",
+        "      <td> 10.587503</td>\n",
+        "      <td>...</td>\n",
+        "      <td> 7.256561</td>\n",
+        "      <td>-1.071060</td>\n",
+        "      <td> 4.727215</td>\n",
+        "      <td> 0.561751</td>\n",
+        "      <td> 7.665033</td>\n",
+        "      <td> 0.537500</td>\n",
+        "      <td> 7.042150</td>\n",
+        "      <td>-0.574226</td>\n",
+        "      <td> 196.074451</td>\n",
+        "      <td> 0.035483</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td> 9.383137</td>\n",
+        "      <td> 8.729077</td>\n",
+        "      <td> 5.255369</td>\n",
+        "      <td> 6.768634</td>\n",
+        "      <td> 5.891512</td>\n",
+        "      <td> 5.124302</td>\n",
+        "      <td> 7.589300</td>\n",
+        "      <td> 7.395294</td>\n",
+        "      <td> 4252.728814</td>\n",
+        "      <td> 10.593247</td>\n",
+        "      <td>...</td>\n",
+        "      <td> 7.256369</td>\n",
+        "      <td>-1.070925</td>\n",
+        "      <td> 4.726980</td>\n",
+        "      <td> 0.562309</td>\n",
+        "      <td> 7.665249</td>\n",
+        "      <td> 0.537912</td>\n",
+        "      <td> 7.041824</td>\n",
+        "      <td>-0.568634</td>\n",
+        "      <td> 196.037051</td>\n",
+        "      <td> 0.035785</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td> 9.383137</td>\n",
+        "      <td> 8.729077</td>\n",
+        "      <td> 5.255369</td>\n",
+        "      <td> 6.768634</td>\n",
+        "      <td> 5.891512</td>\n",
+        "      <td> 5.124302</td>\n",
+        "      <td> 7.589300</td>\n",
+        "      <td> 7.395294</td>\n",
+        "      <td> 4252.728814</td>\n",
+        "      <td> 10.593247</td>\n",
+        "      <td>...</td>\n",
+        "      <td> 7.256369</td>\n",
+        "      <td>-1.070925</td>\n",
+        "      <td> 4.726980</td>\n",
+        "      <td> 0.562309</td>\n",
+        "      <td> 7.665249</td>\n",
+        "      <td> 0.537912</td>\n",
+        "      <td> 7.041824</td>\n",
+        "      <td>-0.568634</td>\n",
+        "      <td> 196.037051</td>\n",
+        "      <td> 0.035785</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "<p>5 rows \u00d7 27 columns</p>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "      B_mag   D51_mag     H_mag     I_mag     J_mag     K_mag  Kepler_mag  \\\n",
+        "0  9.380778  8.726325  5.256940  6.768873  5.892338  5.125826    7.589002   \n",
+        "1  9.380778  8.726325  5.256940  6.768873  5.892338  5.125826    7.589002   \n",
+        "2  9.380778  8.726325  5.256940  6.768873  5.892338  5.125826    7.589002   \n",
+        "3  9.383137  8.729077  5.255369  6.768634  5.891512  5.124302    7.589300   \n",
+        "4  9.383137  8.729077  5.255369  6.768634  5.891512  5.124302    7.589300   \n",
+        "\n",
+        "      R_mag         Teff      U_mag    ...        i_mag      logL      logg  \\\n",
+        "0  7.395205  4254.140271  10.587503    ...     7.256561 -1.071060  4.727215   \n",
+        "1  7.395205  4254.140271  10.587503    ...     7.256561 -1.071060  4.727215   \n",
+        "2  7.395205  4254.140271  10.587503    ...     7.256561 -1.071060  4.727215   \n",
+        "3  7.395294  4252.728814  10.593247    ...     7.256369 -1.070925  4.726980   \n",
+        "4  7.395294  4252.728814  10.593247    ...     7.256369 -1.070925  4.726980   \n",
+        "\n",
+        "       mass     r_mag    radius     z_mag       feh    distance        AV  \n",
+        "0  0.561751  7.665033  0.537500  7.042150 -0.574226  196.074451  0.035483  \n",
+        "1  0.561751  7.665033  0.537500  7.042150 -0.574226  196.074451  0.035483  \n",
+        "2  0.561751  7.665033  0.537500  7.042150 -0.574226  196.074451  0.035483  \n",
+        "3  0.562309  7.665249  0.537912  7.041824 -0.568634  196.037051  0.035785  \n",
+        "4  0.562309  7.665249  0.537912  7.041824 -0.568634  196.037051  0.035785  \n",
+        "\n",
+        "[5 rows x 27 columns]"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from isochrones.starmodel import StarModel"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mod2 = StarModel.load_hdf('starmodels/201208431.h5')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "rm -f starmodels/*.h5"
      ],
      "language": "python",
      "metadata": {},
@@ -185,53 +403,35 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "store = pd.HDFStore('test_starmodel.h5')\n",
-      "df = store['samples']"
+      "store = pd.HDFStore('starmodels/201257461.h5')\n",
+      "store"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "<class 'pandas.io.pytables.HDFStore'>\n",
+        "File path: starmodels/201257461.h5\n",
+        "Empty"
+       ]
+      }
+     ],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mod = get_starmodel(201338508)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "df.columns"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 7,
-       "text": [
-        "Index([u'B_mag', u'D51_mag', u'H_mag', u'I_mag', u'J_mag', u'K_mag', u'Kepler_mag', u'R_mag', u'Teff', u'U_mag', u'V_mag', u'W1_mag', u'W2_mag', u'W3_mag', u'W4_mag', u'age', u'g_mag', u'i_mag', u'logL', u'logg', u'mass', u'r_mag', u'radius', u'z_mag', u'feh', u'distance', u'AV'], dtype='object')"
-       ]
-      }
-     ],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "df.shape"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 8,
-       "text": [
-        "(40000, 27)"
-       ]
-      }
-     ],
-     "prompt_number": 8
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
