--- a/table_stellarprops.tex
+++ b/table_stellarprops.tex
@@ -3,7 +3,7 @@
 \begin{deluxetable*}{cccccccc}
 \tablewidth{0pt}
 \tabletypesize{\scriptsize}
-\tablecaption{Stellar Properties for all Objects of Interest}
+\tablecaption{Stellar Properties for all Objects of Interest \label{Tab:Stars}}
 \tablehead{
 \colhead{EPIC} &
 \colhead{RA (J2000)} &
@@ -14,7 +14,6 @@
 \colhead{[Fe/H]} &
 \colhead{Distance} 
 }
-\label{Tab:Stars}
 \startdata
 201208431 & 174.74564 & -3.905585 &  & & & & \\
 201257461 & 178.161109 & -3.094936 &  & & & & \\
