--- a/exopapers.bib
+++ b/exopapers.bib
@@ -740,6 +740,30 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Buchhave10,
+   author = {{Buchhave}, L.~A. and {Bakos}, G.~{\'A}. and {Hartman}, J.~D. and 
+	{Torres}, G. and {Kov{\'a}cs}, G. and {Latham}, D.~W. and {Noyes}, R.~W. and 
+	{Esquerdo}, G.~A. and {Everett}, M. and {Howard}, A.~W. and 
+	{Marcy}, G.~W. and {Fischer}, D.~A. and {Johnson}, J.~A. and 
+	{Andersen}, J. and {F{\H u}r{\'e}sz}, G. and {Perumpilly}, G. and 
+	{Sasselov}, D.~D. and {Stefanik}, R.~P. and {B{\'e}ky}, B. and 
+	{L{\'a}z{\'a}r}, J. and {Papp}, I. and {S{\'a}ri}, P.},
+    title = "{HAT-P-16b: A 4 M $_{J}$ Planet Transiting a Bright Star on an Eccentric Orbit}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1005.2009},
+ primaryClass = "astro-ph.EP",
+ keywords = {planetary systems, stars: individual: HAT-P-16 GSC 2792-01700, techniques: photometric, techniques: spectroscopic},
+     year = 2010,
+    month = sep,
+   volume = 720,
+    pages = {1118-1125},
+      doi = {10.1088/0004-637X/720/2/1118},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...720.1118B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Burgasser14,
    author = {{Burgasser}, A.~J. and {Gillon}, M. and {Faherty}, J.~K. and 
 	{Radigan}, J. and {Triaud}, A.~H.~M.~J. and {Plavchan}, P. and 
